Generic gizmo tweak - remapping enable/ disable precision #85383

Closed
opened 2021-02-04 19:40:03 +01:00 by Hologram · 9 comments

Blender Version
Tested in: 2.83.0 and 2.91.2
Operating system Windows 10.

Short description of error
When remapping enable/disable precision mode in the Generic Gizmo Modal map from Shift to either alt, A, or Grless () it does not enable precision mode. Note, these are the only three other buttons I have tested.
This is likely to occur on other keymaps too, see mapping in the screenshot below. Since the right shift key is the default key and hasn't been remapped, it still enables precision mode, so the mode is working on my end. Just not the remapping of the keys.
afbeelding.png

Exact steps for others to reproduce the error
Move the default cube, hit the assigned hotkey to enable/ disable precision and you'll see that it does not have any influence, whereas it still does when using the right shift button.

**Blender Version** Tested in: 2.83.0 and 2.91.2 Operating system Windows 10. **Short description of error** When remapping enable/disable precision mode in the Generic Gizmo Modal map from Shift to either alt, A, or Grless (\) it does not enable precision mode. Note, these are the only three other buttons I have tested. This is likely to occur on other keymaps too, see mapping in the screenshot below. Since the right shift key is the default key and hasn't been remapped, it still enables precision mode, so the mode is working on my end. Just not the remapping of the keys. ![afbeelding.png](https://archive.blender.org/developer/F9632998/afbeelding.png) **Exact steps for others to reproduce the error** Move the default cube, hit the assigned hotkey to enable/ disable precision and you'll see that it does not have any influence, whereas it still does when using the right shift button.
Author

Added subscriber: @Hologram

Added subscriber: @Hologram

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Keymodifiers other than Ctrl, Shift, Alt, OSkey are treated differently.
There is a way to get around this limitation in simple keymaps. See #68621 (Keymap: custom key modifiers work inconsistently).
But I'm not sure how it works on modal keymaps.

Keymodifiers other than `Ctrl, Shift, Alt, OSkey` are treated differently. There is a way to get around this limitation in simple keymaps. See #68621 (Keymap: custom key modifiers work inconsistently). But I'm not sure how it works on modal keymaps.

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'

There is confusion in this report.
In the steps to reproduce the bug you mentioned moving the Cube.
In that case you're looking at the wrong keymap.
The keymaps that affect the modal tool of the move are called "Transform Modal Map".

However, the precision key modal is unfortunately hardcoded. Cannot be customized by the user :\

I don't think it needs to be hardcoded, I will investigate the code.

But I am closing this report as it is not clear what the real bug is since the steps to reproduce the bug show one thing and the description shows another.

There is confusion in this report. In the steps to reproduce the bug you mentioned moving the Cube. In that case you're looking at the wrong keymap. The keymaps that affect the modal tool of the move are called "`Transform Modal Map`". However, the precision key modal is unfortunately hardcoded. Cannot be customized by the user :\ I don't think it needs to be hardcoded, I will investigate the code. But I am closing this report as it is not clear what the real bug is since the steps to reproduce the bug show one thing and the description shows another.
Author

The confusion is probably stemming from the unavailability of the precision mode within the Transform modal map.
So I presumed this entry within the gizmo tweak modal map was the same thing.
In that case it is indeed likely that by adding the precision mode as user-configurable keymap under the Transform modal map, the issue is fixed.
Could you report back here if you managed to remove the hard-coded limitation?

The confusion is probably stemming from the unavailability of the precision mode within the Transform modal map. So I presumed this entry within the gizmo tweak modal map was the same thing. In that case it is indeed likely that by adding the precision mode as user-configurable keymap under the Transform modal map, the issue is fixed. Could you report back here if you managed to remove the hard-coded limitation?

The hard-coded limitation has been removed ;)

I am confident that change is safe, but generally this type of change has some unpredictable side effects in other modal keymaps.
I did several tests, but if any problems arise in this area, please report.

The hard-coded limitation has been removed ;) I am confident that change is safe, but generally this type of change has some unpredictable side effects in other modal keymaps. I did several tests, but if any problems arise in this area, please report.
Author

That's quick, thanks! I'll be sure to properly test this (and report if necessary) after the next release.

That's quick, thanks! I'll be sure to properly test this (and report if necessary) after the next release.
Author

@mano-wii I just tested the enable/ disable precision remapping in 2.92 for the generic gizmo tweak:
afbeelding.png
Any other key than shift still won't enable/ disable precision, whereas precision is enabled/ disabled using Right shift (since I didn't modify this).
Just to confirm was the fix added to 2.92?

@mano-wii I just tested the enable/ disable precision remapping in 2.92 for the generic gizmo tweak: ![afbeelding.png](https://archive.blender.org/developer/F9851238/afbeelding.png) Any other key than shift still won't enable/ disable precision, whereas precision is enabled/ disabled using Right shift (since I didn't modify this). Just to confirm was the fix added to 2.92?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85383
No description provided.